--- a/Xsis.Web/Views/Keluarga/_Create.cshtml
+++ b/Xsis.Web/Views/Keluarga/_Create.cshtml
@@ -63,8 +63,8 @@
                 <label>Jenis Kelamin</label>
                 <select class="form-control blueborder" name="gender" id="idGender">
                     <option value="">-Pilih-</option>
-                    <option value="false">Perempuan</option>
-                    <option value="true">Laki-laki</option>
+                    <option value="0">Perempuan</option>
+                    <option value="1">Laki-laki</option>
                 </select>
             </td>
             <td colspan="1">
