--- a/Xsis.Web/Views/Biodata/Index.cshtml
+++ b/Xsis.Web/Views/Biodata/Index.cshtml
@@ -17,7 +17,7 @@
     </table>
 </div>
 
-<div class="modal fade" id="idMdlEditBiodata" tabindex="-1" role="dialog">
+<div class="modal fade" id="idMdlEditBiodata" tabindex="-1" role="dialog" data-keyboard="false" data-backdrop="static">
     <div class="modal-dialog" style="width:850px;" role="document">
         <div class="modal-content">
             <div class="modal-header birubg">
@@ -37,24 +37,7 @@
 
 
 <script>
-    var vDataID = 4;
-    var vDataFamilyTreeType =
-          { 1: 'Parents', 2: 'Children' };
-    var vDataFamilyRelation =
-          { 1: 'Father', 2: 'Mother', 3: 'Brother/Sister' };
-    var vDataGender =
-          { false: 'Perempuan', true: 'Laki-laki' };
-    var vDataEducationLevel =
-          { 1: 'SD', 2: 'SLTP', 3: 'SLTA', 4: 'Sarjana' };
-    var vDataBulan =
-          { Jan: 'Januari', Feb: 'Februari', Mar: 'Maret', Apr: 'April', May: 'Mei', Jun: 'Juni', Jul: 'Juli', Aug: 'Agustus', Sep: 'September', Oct: 'Oktober', Nov: 'November', Dec: 'Desember' };
-    var vDataReligion =
-          { 1: 'Islam', 2: 'Kristen', 3: 'Protestan', 4: 'Hindu', 5: 'Buddha', 6: 'Konghuchu' };
-    var vDataIdentityType =
-        { 1: 'KTP',2:'SIM' };
-    var vDataMaritalStatus =
-        { 1: 'Menikah', 2: 'Single' };
-
+    var vDataID = 1;
 
     $(document).ready(function () {
 
@@ -65,6 +48,14 @@
             method: 'Get',
             success: function (d) {
                 debugger;
+                var vDataGender = { false: 'Perempuan', true: 'Laki-laki' };
+                a = new Date(parseInt(d.dob.substr(6)));
+                vtanggal = (a.getDate() < 10 ? '0' : '') + a.getDate();
+                vbulan = a.getMonth() +1;
+                var vMonthList =
+                    { 1: 'Januari', 2: 'Februari', 3: 'Maret', 4: 'April', 5: 'Mei', 6: 'Juni', 7: 'Juli', 8: 'Agustus', 9: 'September', 10: 'Oktober', 11: 'November', 12: 'Desember' };
+                vtahun = a.getFullYear();
+                vDataDob = vtanggal + " " + vMonthList[vbulan] + " " + vtahun;
 
                 vStrHtml = vStrHtml +
                 '<tr class="birutext">' +
@@ -85,7 +76,7 @@
                 '<tr class="birutext">' +
                 '<td>Tempat, Tgl. Lahir</td>' +
                 '<td>:</td>' +
-                '<td input>' + d.pob + ', ' +  + '</td>' +
+                '<td input>' + d.pob + ', ' + vDataDob + '</td>' +
                 '</tr>' +
                 '<tr class="birutext">' +
                 '<td>Jenis Kelamin, Tinggi (cm), Berat (kg)</td>' +
@@ -95,7 +86,7 @@
                 '<tr class="birutext">' +
                 '<td>Agama</td>' +
                 '<td>:</td>' +
-                '<td input>' + vDataReligion[d.religion_id] + '</td>' +
+                '<td input>' + d.religion_nam + '</td>' +
                 '</tr>'+
                 '<tr class="birutext">' +
                 '<td>Kewarganegaraan, Suku Bangsa</td>' +
@@ -110,12 +101,12 @@
                  '<tr class="birutext">' +
                 '<td>Jenis & Nomor Identitas</td>' +
                 '<td>:</td>' +
-                '<td input>' + vDataIdentityType[d.identity_type_id] + ', ' + d.identity_no + '</td>' +
+                '<td input>' + d.identity_type_name + ', ' + d.identity_no + '</td>' +
                 '</tr>'+
                 '<tr class="birutext">' +
                 '<td>Status & Tahun Pernikahan</td>' +
                 '<td>:</td>' +
-                '<td input>' + vDataMaritalStatus[d.marital_status_id] + ' - ' + d.mariage_year + '</td>' +
+                '<td input>' + d.marital_status_name + ' - ' + d.mariage_year + '</td>' +
                 '</tr>';
 
                 $('#idTblBodyBiodata').append(vStrHtml);
