--- a/Xsis.Web/Views/Biodata/Index.cshtml
+++ b/Xsis.Web/Views/Biodata/Index.cshtml
@@ -43,7 +43,7 @@
 
         var vStrHtml = '';
         $.ajax({
-            url: '/Biodata/AmbilData',
+            url: '/Biodata/Tampil',
             data: {ID:vDataID},
             method: 'Get',
             success: function (d) {
